[project]
name = "cksync"
version = "0.1.0"
description = "cksync your Python lock files!"
readme = "README.md"
authors = [
    { name = "Nick Grisafi", email = "njgrisafi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cksync = "cksync:main"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/tests/*",
    ".github/*",
]
